[package]
name = "knzhou"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
confy = "0.6.1"
rayon = "1.10.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
