[package]
name = "knzhou"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
confy = "0.6.1"
dirs = "6.0.0"
env_logger = { version = "0.11.6", features = ["color"] }
jiff = { version = "0.2.4", features = ["serde"] }
log = "0.4.26"
rayon = "1.10.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
toml = "0.8.20"
